--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <input id="pokemon-search-input" type="text" name="">
       </form>
 
-      <div id="pokemon-container">
-        <p><center>There are no Pokémon here</center></p>
-      </div>
+      <ul id="pokemon-container" class="cards">
+
+      </ul>
     </div>
   </body>
 </html>
