--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <input id="pokemon-search-input" type="text" name="">
       </form>
 
-      <ul id="pokemon-container" class="cards">
+      <div id="pokemon-container">
 
-      </ul>
+      </div>
     </div>
+
+</div>
   </body>
 </html>
